# FDES

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt  Useage.txt
ExampleSpecimens/Au_cubeoctahedron_cnf/: Params_Auparticle_STEM.cnf  dataFDES_Auparticle.cnf
ExampleSpecimens/Au_cubeoctahedron_emd/: Auparticle.emd
ExampleSpecimens/Si_001_11k_cnf/: dataFDES_11k.cnf
ExampleSpecimens/SrTiO3_qsc/: SrTiO3.cfg  SrTiO3.qsc
Python/: CMakeLists.txt  pyFDES.py
cmake/Modules/: CheckComputeCapability.cmake  cuda_compute_capability.c
include/: FDES.h  complexMath.h  coordArithmetic.h  crystalMaker.h  cublas_assert.hpp  cuda_assert.hpp  cufft_assert.h  curand_assert.h  globalVariables.h  kernel_assert.hpp  multisliceSimulation.h  objectCoordinates.h  optimFunctions.h  paramStructure.h  performanceTimer.h  projectedPotential.h  rwBinary.h  rwHdf5.h  rwQsc.h  singleton.h  wingetopt.h
qstem-libs/: CMakeLists.txt  fileio_fftw3.cpp  imagelib_fftw3.cpp  matrixlib.cpp  memory_fftw3.cpp  readparams.cpp
src/: FDES.cu  FDESExport.cu  complexMath.cu  crystalMaker.cu  multisliceSimulation.cu  objectCoordinates.cu  optimFunctions.cu  paramStructure.cu  projectedPotential.cu  rwBinary.cpp  rwHdf5.cu  rwQsc.cu  wingetopt.cpp
